Improve limitations and future work section in spec

--- a/docs/spec/refs.bib
+++ b/docs/spec/refs.bib
@@ -218,3 +218,31 @@ isbn="978-3-540-49178-1"
   month = {June},
   day = 26
 }
+
+@software{coq_proof_assistant,
+  author       = {The Coq Development Team},
+  title        = {The Coq Proof Assistant},
+  month        = jan,
+  year         = 2021,
+  publisher    = {Zenodo},
+  version      = {8.13},
+  doi          = {10.5281/zenodo.4501022},
+  url          = {https://doi.org/10.5281/zenodo.4501022}
+}
+
+@incollection{intro_to_cic,
+  TITLE = {{Introduction to the Calculus of Inductive Constructions}},
+  AUTHOR = {Paulin-Mohring, Christine},
+  URL = {https://hal.inria.fr/hal-01094195},
+  BOOKTITLE = {{All about Proofs, Proofs for All}},
+  EDITOR = {Bruno Woltzenlogel Paleo and David Delahaye},
+  PUBLISHER = {{College Publications}},
+  SERIES = {Studies in Logic (Mathematical logic and foundations)},
+  VOLUME = {55},
+  YEAR = {2015},
+  MONTH = Jan,
+  KEYWORDS = {Coq proof assistant ; Calculus of Inductive Constructions},
+  PDF = {https://hal.inria.fr/hal-01094195/file/CIC.pdf},
+  HAL_ID = {hal-01094195},
+  HAL_VERSION = {v1},
+}
